--- a/static/cranefly/css/cranefly/profiles.less
+++ b/static/cranefly/css/cranefly/profiles.less
@@ -74,7 +74,7 @@
       float: right;
       margin-bottom: @baseLineHeight * -1;
       position: relative;
-      top: 40px + @fontSizeSmall - 4px;
+      top: 40px + @fontSizeSmall - 8px;
 
       color: @grayLight;
       font-size: @fontSizeSmall;
